--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>网易云音乐 API</title>
-</head>
-<body>
-  <h1>网易云音乐 API</h1>
-  当你看到这个页面时,这个服务已经成功跑起来了~
-  <a href="https://binaryify.github.io/NeteaseCloudMusicApi/">查看文档</a>
-  <h2>例子:</h2>
-  <ul>
-    <li>1. <a href="/search?keywords=海阔天空">搜索</a></li>
-    <li>2. <a href="/comment/music?id=186016&limit=1">歌曲评论</a></li>
-    <li>3. <a href="/dj/program?rid=336355127">电台节目</a></li>
-  </ul>
-  <style>
-    html,body{
-      height: 100vh;
-      width: 100vw;
-      margin: 0;
-      padding: 0;
-      background: #ffffff;
-      text-align: center;
-      margin-top:30px;
-      overflow: hidden;
-    }
-    *{
-      color:rgb(100,100,100);
-    }
-    a{
-      color:#42b983;
-    }
-    ul,li{
-      margin: 0;
-    }
-    ul{
-      margin-left: -40px;
-      line-height: 30px;
-    }
-    li{
-      list-style: none;
-    }
-  </style>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>vuecli-music-webapp</title><link href=/css/app.80186ef3.css rel=preload as=style><link href=/css/chunk-vendors.9131e34d.css rel=preload as=style><link href=/js/app.1c88186f.js rel=preload as=script><link href=/js/chunk-vendors.71e691a7.js rel=preload as=script><link href=/css/chunk-vendors.9131e34d.css rel=stylesheet><link href=/css/app.80186ef3.css rel=stylesheet></head><body><noscript><strong>We're sorry but vuecli-music-webapp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.71e691a7.js></script><script src=/js/app.1c88186f.js></script></body></html>
